fix(view): overlay view overflow

--- a/src/core/view/components/index.scss
+++ b/src/core/view/components/index.scss
@@ -14,12 +14,12 @@
     z-index: 9999;
     top: 0;
     width: 100%;
-    height: 200%;
+    height: 100%;
 
     #root-overlay-body {
       position: relative;
       width: 100%;
-      height: 50%;
+      height: 100%;
     }
   }
 
